# Gu

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out  install.sh
extensions/syntax/: CHANGELOG.md  README.md  package.json  syntax-highlighting-gu-language-0.0.2.vsix
extensions/syntax/syntaxes/: gu.tmLanguage.json
lib/: GUbase.gu  GUbase.guh  GUio.gu  GUscanner.gu
src/: main.cpp  teste
src/ast/: ast.cpp  ast.h
src/astParser/: AstParser.cpp  AstParser.h  types.cpp
src/codegen/llvm/: IRGenerator.cpp  IRGenerator.h  assembler.cpp  assembler.h
src/codegen/translators/: gu2c.cpp  gu2c.h
src/lexer/: lexer.cpp  lexer.h
src/lexicalScanner/: LexicalScanner.cpp  LexicalScanner.h
src/main/: argHandler.cpp  argHandler.h  main.cpp
src/parser/: parser.cpp  parser.h
src/parser/ast/: ast.cpp  ast.h
src/parser/processors/: astCloner.cpp  astCloner.h  generics.h  importManager.cpp  importManager.h  libcDefiner.cpp  libcDefiner.h  templates.h
src/semantic/: importManager.cpp  importManager.h  libcDefiner.cpp  libcDefiner.h  validator.cpp  validator.h
src/types/: Base.cpp  Token.cpp  Token.h
